--- a/Dos.ORM.Sqlite/Dos.ORM.Sqlite.csproj
+++ b/Dos.ORM.Sqlite/Dos.ORM.Sqlite.csproj
@@ -33,9 +33,15 @@
     <DocumentationFile>bin\Release\Dos.ORM.Sqlite.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dos.ORM, Version=1.9.8.8, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dos.ORM.1.9.8.8\lib\net40\Dos.ORM.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.SQLite">
+    <Reference Include="System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLL\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -49,10 +55,14 @@
     <Compile Include="SqliteProvider.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dos.ORM.csproj">
-      <Project>{4bef1983-f275-4807-96ea-25b973bd6e94}</Project>
-      <Name>Dos.ORM</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Dos.ORM更新日志.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
