--- a/Dos.ORM.MySql/Dos.ORM.MySql.csproj
+++ b/Dos.ORM.MySql/Dos.ORM.MySql.csproj
@@ -33,6 +33,10 @@
     <DocumentationFile>bin\Release\Dos.ORM.MySql.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dos.ORM, Version=1.9.8.8, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dos.ORM.1.9.8.8\lib\net40\Dos.ORM.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.6.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\驾校考试系统\DrivingExam\packages\MySql.Data.6.9.6\lib\net40\MySql.Data.dll</HintPath>
@@ -49,10 +53,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dos.ORM.csproj">
-      <Project>{4bef1983-f275-4807-96ea-25b973bd6e94}</Project>
-      <Name>Dos.ORM</Name>
-    </ProjectReference>
+    <Content Include="Dos.ORM更新日志.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
