--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\Dos.Tools.EntityDesign\packages.config" />
   <repository path="..\Demo在这里\初级玩法demo之mvc简单三层\Business\packages.config" />
   <repository path="..\Demo在这里\初级玩法demo之mvc简单三层\UI\packages.config" />
   <repository path="..\Dos.ORM.MySql\packages.config" />
