--- a/Demo在这里/初级玩法demo之mvc简单三层/UI/Web.config
+++ b/Demo在这里/初级玩法demo之mvc简单三层/UI/Web.config
@@ -13,7 +13,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DosConn" providerName="Dos.ORM.MySql" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="MySqlConn" providerName="Dos.ORM.MySql" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
   </connectionStrings>
   <system.web>
 
