--- a/Demo在这里/初级玩法demo之mvc简单三层/UI/UI.csproj
+++ b/Demo在这里/初级玩法demo之mvc简单三层/UI/UI.csproj
@@ -146,7 +146,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
