--- a/Demo在这里/初级玩法demo之mvc简单三层/UI/Web.config
+++ b/Demo在这里/初级玩法demo之mvc简单三层/UI/Web.config
@@ -13,7 +13,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="MySqlConn" providerName="Dos.ORM.MySql" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="MySqlConn" providerName="Dos.ORM.MySql" connectionString="Data Source=127.0.0.1;Database=DosORMMySql;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="SqlServerConn" providerName="Dos.ORM.SqlServer9" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="SqliteConn" providerName="Dos.ORM.Sqlite" connectionString="Data Source=127.0.0.1;Database=DosORMSqlite;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="AccessConn" providerName="Dos.ORM.MsAccess" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="OracleConn" providerName="Dos.ORM.Oracle" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
   </connectionStrings>
   <system.web>
 
