--- a/Demo在这里/初级玩法demo之mvc简单三层/Business/Business.csproj
+++ b/Demo在这里/初级玩法demo之mvc简单三层/Business/Business.csproj
@@ -35,6 +35,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.97.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Data.SQLite.Core.1.0.97.0\lib\net40\System.Data.SQLite.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Base\DB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestTableLogic.cs" />
+    <Compile Include="MySql\TableMySqlLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dos.ORM.csproj">
@@ -55,6 +59,10 @@
       <Project>{54954798-4117-45fe-92f8-2b32a62e7fbc}</Project>
       <Name>Dos.ORM.MySql</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Dos.ORM.Sqlite\Dos.ORM.Sqlite.csproj">
+      <Project>{7a0cbba2-6322-4765-8a68-24af58c24f79}</Project>
+      <Name>Dos.ORM.Sqlite</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{657e4ecd-3cb3-4d79-9393-a2a774b78513}</Project>
       <Name>Model</Name>
@@ -64,6 +72,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net40\System.Data.SQLite.Core.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net40\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net40\System.Data.SQLite.Core.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
