--- a/Demo在这里/初级玩法demo之mvc简单三层/Business/packages.config
+++ b/Demo在这里/初级玩法demo之mvc简单三层/Business/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dos.Common" version="1.0.1.6" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net40" />
 </packages>
