--- a/Demo在这里/初级玩法demo之mvc简单三层/Model/Model.csproj
+++ b/Demo在这里/初级玩法demo之mvc简单三层/Model/Model.csproj
@@ -43,19 +43,16 @@
     <Compile Include="Base\Param.cs" />
     <Compile Include="Base\ParamExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestTable.cs" />
-    <Compile Include="TestTable2.cs" />
+    <Compile Include="MySql\TableMysql.cs" />
+    <Compile Include="Sqlite\TableSqlite.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dos.ORM.csproj">
       <Project>{4bef1983-f275-4807-96ea-25b973bd6e94}</Project>
       <Name>Dos.ORM</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Dos.ORM.MySql\Dos.ORM.MySql.csproj">
-      <Project>{54954798-4117-45fe-92f8-2b32a62e7fbc}</Project>
-      <Name>Dos.ORM.MySql</Name>
-    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
