--- a/Demo在这里/初级玩法demo之mvc简单三层/UI/packages.config
+++ b/Demo在这里/初级玩法demo之mvc简单三层/UI/packages.config
@@ -19,4 +19,5 @@
   <package id="Microsoft.Net.Http.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net40" />
 </packages>
