扩展PostgreSql数据库支持

--- a/Demo在这里/初级玩法demo之mvc简单三层/UI/Web.config
+++ b/Demo在这里/初级玩法demo之mvc简单三层/UI/Web.config
@@ -18,6 +18,7 @@
     <add name="SqliteConn" providerName="Dos.ORM.Sqlite" connectionString="Data Source=127.0.0.1;Database=DosORMSqlite;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
     <add name="AccessConn" providerName="Dos.ORM.MsAccess" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
     <add name="OracleConn" providerName="Dos.ORM.Oracle" connectionString="Data Source=127.0.0.1;Database=DosORMTest;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="PostgreSqlConn" providerName="Dos.ORM.PostgreSql" connectionString="Data Source=127.0.0.1;Database=DosORMPostgreSql;User Id=postgres;Password=ROOT;" />
   </connectionStrings>
   <system.web>
 
