--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\Demo在这里\初级玩法demo之mvc简单三层\Business\packages.config" />
   <repository path="..\Demo在这里\初级玩法demo之mvc简单三层\UI\packages.config" />
   <repository path="..\Dos.ORM.MySql\packages.config" />
+  <repository path="..\Dos.ORM.PostgreSql\packages.config" />
   <repository path="..\Dos.ORM.Sqlite\packages.config" />
 </repositories>
