--- a/Demo在这里/初级玩法demo之mvc简单三层/UI/UI.csproj
+++ b/Demo在这里/初级玩法demo之mvc简单三层/UI/UI.csproj
@@ -167,6 +167,10 @@
       <Project>{54954798-4117-45fe-92f8-2b32a62e7fbc}</Project>
       <Name>Dos.ORM.MySql</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Dos.ORM.PostgreSql\Dos.ORM.PostgreSql.csproj">
+      <Project>{86f95784-a739-41ef-9724-909126c11800}</Project>
+      <Name>Dos.ORM.PostgreSql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Dos.ORM.Sqlite\Dos.ORM.Sqlite.csproj">
       <Project>{7a0cbba2-6322-4765-8a68-24af58c24f79}</Project>
       <Name>Dos.ORM.Sqlite</Name>
@@ -182,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\Home\Sqlite.cshtml" />
+    <Content Include="Views\Home\PostgreSql.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\Home\Access.cshtml" />
