--- a/Demo在这里/中级玩法demo之repository/UI/UI.csproj
+++ b/Demo在这里/中级玩法demo之repository/UI/UI.csproj
@@ -133,7 +133,9 @@
     <Content Include="Scripts\avalon.min.js" />
     <Content Include="Scripts\jquery-1.11.1.min.js" />
     <Content Include="Scripts\jquery.pagination.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
