--- a/Demo在这里/中级玩法demo之repository/Common/Common.csproj
+++ b/Demo在这里/中级玩法demo之repository/Common/Common.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common.cs" />
     <Compile Include="EnumService.cs" />
     <Compile Include="Filter\ExceptionLogAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
