--- a/Dos.ORM.Sqlite/Dos.ORM.Sqlite.csproj
+++ b/Dos.ORM.Sqlite/Dos.ORM.Sqlite.csproj
@@ -33,8 +33,8 @@
     <DocumentationFile>bin\Release\Dos.ORM.Sqlite.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dos.ORM">
-      <HintPath>..\packages\Dos.ORM.1.9.9.9\lib\net40\Dos.ORM.dll</HintPath>
+    <Reference Include="Dos.ORM, Version=1.10.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dos.ORM.1.10.1.0\lib\net40\Dos.ORM.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
