--- a/Demo在这里/中级玩法demo之repository/DataAccess.Entities/DataAccess.Entities.csproj
+++ b/Demo在这里/中级玩法demo之repository/DataAccess.Entities/DataAccess.Entities.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\EntityExtentions.cs" />
     <Compile Include="Base\Param.cs" />
     <Compile Include="Base\ParamExtentions.cs" />
     <Compile Include="Model\TableMysql.cs" />
