--- a/Demo在这里/中级玩法demo之repository/Common/packages.config
+++ b/Demo在这里/中级玩法demo之repository/Common/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dos.Common" version="1.0.3.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
+  <package id="NPOI" version="2.1.3.1" targetFramework="net40" />
 </packages>
