--- a/Demo在这里/中级玩法demo之repository/DataAccess/DataAccess.csproj
+++ b/Demo在这里/中级玩法demo之repository/DataAccess/DataAccess.csproj
@@ -47,11 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base\DB.cs" />
     <Compile Include="Base\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\Repository.cs" />
-    <Compile Include="Repository\TableMysqlRepository.cs" />
+    <Compile Include="TableMysqlRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dos.ORM.csproj">
