--- a/Demo在这里/初级玩法demo之mvc简单三层/Business/Business.csproj
+++ b/Demo在这里/初级玩法demo之mvc简单三层/Business/Business.csproj
@@ -52,9 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\DB.cs" />
-    <Compile Include="PostgreSql\TablePostgreSqlLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MySql\TableMySqlLogic.cs" />
+    <Compile Include="TestTableLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dos.ORM.csproj">
