--- a/Demo在这里/初级玩法demo之mvc简单三层/Model/Model.csproj
+++ b/Demo在这里/初级玩法demo之mvc简单三层/Model/Model.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Base\Param.cs" />
     <Compile Include="Base\ParamExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MySql\TableMysql.cs" />
+    <Compile Include="TestTable.cs" />
     <Compile Include="Sqlite\TableSqlite.cs" />
   </ItemGroup>
   <ItemGroup>
