--- a/Demo在这里/中级玩法demo之repository/DataCache/DataCache.csproj
+++ b/Demo在这里/中级玩法demo之repository/DataCache/DataCache.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Base\IISCacheBase.cs" />
     <Compile Include="Base\RedisCacheBase.cs" />
     <Compile Include="Base\RedisConfig.cs" />
-    <Compile Include="TableMysqlCache.cs" />
+    <Compile Include="TestTableCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
