--- a/Demo在这里/中级玩法demo之repository/UI/Web.config
+++ b/Demo在这里/中级玩法demo之repository/UI/Web.config
@@ -14,6 +14,7 @@
   </appSettings>
   <connectionStrings>
     <add name="MySqlConn" providerName="Dos.ORM.MySql" connectionString="Data Source=127.0.0.1;Database=DosORMMySql;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
+    <add name="SqlServerConn" providerName="Dos.ORM.SqlServer9" connectionString="Server=.\sql2008r2;uid=sa;pwd=sa;database=DosORMSqlServer;" />
   </connectionStrings>
   <system.web>
     
