--- a/Demo在这里/中级玩法demo之repository/Business/Business.csproj
+++ b/Demo在这里/中级玩法demo之repository/Business/Business.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TableMySqlLogic.cs" />
+    <Compile Include="TestTableLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dos.ORM.csproj">
