--- a/Demo在这里/中级玩法demo之repository/DataAccess/DataAccess.csproj
+++ b/Demo在这里/中级玩法demo之repository/DataAccess/DataAccess.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Db.cs" />
     <Compile Include="Base\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\Repository.cs" />
