--- a/Demo在这里/中级玩法demo之repository/UI/Web.config
+++ b/Demo在这里/中级玩法demo之repository/UI/Web.config
@@ -11,6 +11,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="NoSqlType" value="IIS" />
+    <add key="RedisHost" value="192.168.2.150" />
+    <add key="RedisPort" value="6379" />
   </appSettings>
   <connectionStrings>
     <add name="MySqlConn" providerName="Dos.ORM.MySql" connectionString="Data Source=127.0.0.1;Database=DosORMMySql;User Id=root;Password=root;Convert Zero Datetime=True;Allow Zero Datetime=True;" />
