--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,6 +9,7 @@
   <repository path="..\Demo在这里\中级玩法demo之repository\DataCache\packages.config" />
   <repository path="..\Demo在这里\中级玩法demo之repository\UI\packages.config" />
   <repository path="..\Dos.ORM.MySql\packages.config" />
+  <repository path="..\Dos.ORM.NoSql\packages.config" />
   <repository path="..\Dos.ORM.PostgreSql\packages.config" />
   <repository path="..\Dos.ORM.Sqlite\packages.config" />
 </repositories>
