--- a/Demo在这里/中级玩法demo之repository/UI/UI.csproj
+++ b/Demo在这里/中级玩法demo之repository/UI/UI.csproj
@@ -173,7 +173,7 @@
     </ProjectReference>
     <ProjectReference Include="..\Business\Business.csproj">
       <Project>{8ca9aac3-e22e-4861-8595-a7c8e41f1b3a}</Project>
-      <Name>Business</Name>
+      <Name>Business %28中级玩法demo之repository\Business%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{8fdf9bf2-ffd2-419c-91bf-a6e4e7a38334}</Project>
