--- a/Demo在这里/中级玩法demo之repository/DataAccess.Entities/DataAccess.Entities.csproj
+++ b/Demo在这里/中级玩法demo之repository/DataAccess.Entities/DataAccess.Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Base\ParamExtentions.cs" />
     <Compile Include="Model\CmsTitleTitlePartRecord.cs" />
     <Compile Include="Model\TestTable.cs" />
+    <Compile Include="Model\TestTable1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\TestTable.cs" />
   </ItemGroup>
