--- a/Dos.ORM.Test/Dos.ORM.Test.csproj
+++ b/Dos.ORM.Test/Dos.ORM.Test.csproj
@@ -45,6 +45,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +56,8 @@
     <Compile Include="Model\BizHouse.cs" />
     <Compile Include="Model\BizStandardList.cs" />
     <Compile Include="Model\BizUser.cs" />
+    <Compile Include="Model\B_OXunGoods.cs" />
+    <Compile Include="Model\B_OXunGoods.Ext.cs" />
     <Compile Include="Model\CmsNews.cs" />
     <Compile Include="Model\Table.cs" />
     <Compile Include="Program.cs" />
