--- a/Dos.ORM.csproj
+++ b/Dos.ORM.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Web" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
