--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
-bin/
-logs/
-obj/
+**/aspnet_client/
+**/bin/Debug/
+**/bin/Release/
+**/bin/*.xml
+**/bin/Debug/*.xml
+**/bin/Release/*.xml
+**/obj/
+**/log/
+**/logs/
+**/packages/
+*.scc
 *.suo
-/*.suo
-*.v11.suo
+*.deleteme
+*.pdb
+*.mdf
+*.ldf
+Thumbs.db
 *.nupkg
 *.nuspec.txt
 *.nuspec
 NuGet.exe
-.suo
-.v11.suo
