添加一些函数

--- a/Dos.ORM.Standard/Dos.ORM/Dos.ORM.csproj
+++ b/Dos.ORM.Standard/Dos.ORM/Dos.ORM.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <!--net20;-->
@@ -20,17 +20,17 @@
     <PackageReference Include="lcpi.data.oledb" Version="1.7.0.3395" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.OracleClient" />    
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Reflection.Emit">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.0.0\ref\netcoreapp2.0\System.Reflection.Emit.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Extensions" />   
   </ItemGroup>
-
+  
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="FastExpressionCompiler">
       <Version>1.7.1</Version>
@@ -40,6 +40,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory">
       <Version>2.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>2.5.11</Version>
     </PackageReference>
     <PackageReference Include="System.Data.Common">
       <Version>4.3.0</Version>
